--- a/.github/workflows/IPQ60XX-6.12-WIFI.yml
+++ b/.github/workflows/IPQ60XX-6.12-WIFI.yml
@@ -6,8 +6,8 @@ on:
     - cron: 0 19 * * *
 
 env:
-  REPO_URL: https://github.com/LiBwrt/openwrt-6.x.git
-  REPO_BRANCH: kernel-6.12
+  REPO_URL: https://github.com/istoreos/istoreos.git
+  REPO_BRANCH: istoreos-22.03
   CONFIG_FILE: configs/ipq60xx-6.12-wifi.config
   DIY_SCRIPT: diy-script.sh
   CLASH_KERNEL: amd64
